--- a/playbooks/allocate_and_create.yml
+++ b/playbooks/allocate_and_create.yml
@@ -1,11 +1,9 @@
 ---
-- name: Allocate CIDRs from Excel & create GCP subnets
+- name: Allocate CIDRs from Excel & create GCP subnets (local Excel)
   hosts: local
   gather_facts: false
   vars_files:
     - ../vars.yml
   roles:
-    - role: sync_git
     - role: allocater_cidr
     - role: create_subnet
-    - role: sync_git
