Disable vars_files in allocate_and_create.yml
Comment out vars_files to disable variable loading.

--- a/playbooks/allocate_and_create.yml
+++ b/playbooks/allocate_and_create.yml
@@ -2,8 +2,8 @@
 - name: Allocate CIDRs from Excel & create GCP subnets (local Excel)
   hosts: localhost
   gather_facts: false
-  vars_files:
-    - ../vars.yml
+  #vars_files:
+   # - ../vars.yml
   roles:
     - role: allocater_cidr
     - role: create_subnet
