--- a/playbooks/gcp.yml
+++ b/playbooks/gcp.yml
@@ -4,24 +4,22 @@
   gather_facts: no
 
   vars:
-    github_repo_url: "https://github.com/premkumargunasekar/GCP_MULTIPLE_REGION.git"
+    github_repo_url: "https://github.com/username/GCP_MULTIPLE_REGION.git"
     repo_local_path: "/tmp/ip-repo"
     excel_file_path: "{{ repo_local_path }}/cidr_data/cidr_pool.csv"
     pool_sheet: "cidr_pool_master"
     vpc_name: "prem-vpc-network"
     project_id: "curious-idea-475408-d2"
 
-    # User inputs from AAP or ServiceNow catalog
     subnet_requests: "{{ subnet_requests | default([]) }}"
     remarks: "{{ remarks | default('Created via AAP/ServiceNow Catalog') }}"
-
     allowed_sizes: ['/23','/24','/25','/26','/27','/28','/29']
     max_requests: 5
 
   tasks:
 
     - name: Validate number of subnet requests
-      assert:
+      ansible.builtin.assert:
         that:
           - subnet_requests | length > 0
           - subnet_requests | length <= max_requests
@@ -30,13 +28,13 @@
     - name: Validate subnet size values
       vars:
         invalids: "{{ subnet_requests | map(attribute='subnet_size') | reject('in', allowed_sizes) | list }}"
-      assert:
+      ansible.builtin.assert:
         that:
           - invalids | length == 0
         fail_msg: "Invalid subnet sizes: {{ invalids }}. Allowed: {{ allowed_sizes }}"
 
     - name: Ensure git is installed
-      package:
+      ansible.builtin.package:
         name: git
         state: present
 
@@ -47,177 +45,48 @@
         version: main
         force: yes
 
-    - name: Read pool data from Excel
+    - name: Read pool data from CSV
       ansible.builtin.read_csv:
         path: "{{ excel_file_path }}"
-        sheet_name: "{{ pool_sheet }}"
       register: pool_data
 
     - name: Extract available CIDR pools (Free or Partially)
-      set_fact:
-        candidate_pools: >-
-          {{ pool_data.list | selectattr('Status','match','(?i)Free|Partially') | list }}
+      ansible.builtin.set_fact:
+        candidate_pools: "{{ pool_data.list | selectattr('Status','match','(?i)Free|Partially') | list }}"
 
     - name: Fail if no candidate pools
-      fail:
+      ansible.builtin.fail:
         msg: "No Free or Partially Used CIDRs found in {{ excel_file_path }}"
       when: candidate_pools | length == 0
 
     - name: Initialize allocation results list
-      set_fact:
+      ansible.builtin.set_fact:
         allocation_results: []
 
-    - name: Allocate subnets dynamically
+    - name: Include subnet allocation for each request
+      ansible.builtin.include_tasks: allocate_subnet.yml
       loop: "{{ subnet_requests }}"
       loop_control:
-        index_var: req_idx
         loop_var: req
-      block:
-
-        - name: Run Python allocator to find available subnet
-          shell: |
-            python3 - <<'PY'
-            import json, ipaddress, os, sys
-
-            pool_json = os.environ.get('POOLS_JSON')
-            req_region = os.environ.get('REQ_REGION')
-            desired_prefix = int(os.environ.get('DESIRED_PREFIX'))
-
-            pools = json.loads(pool_json)
-
-            def used_set(s):
-                if not s:
-                    return set()
-                return set([x.strip() for x in s.split(',') if x.strip()])
-
-            for p in pools:
-                base = p.get("CIDR Range")
-                if not base:
-                    continue
-                try:
-                    base_net = ipaddress.ip_network(base.strip())
-                except Exception:
-                    continue
-
-                if base_net.prefixlen > desired_prefix:
-                    continue
-
-                subs = list(base_net.subnets(new_prefix=desired_prefix))
-                used = used_set(p.get("Used CIDRs",""))
-                for s in subs:
-                    sstr = str(s)
-                    conflict = False
-                    for u in used:
-                        try:
-                            up = ipaddress.ip_network(u)
-                        except:
-                            continue
-                        if s.overlaps(up):
-                            conflict = True
-                            break
-                    if not conflict:
-                        out = {
-                          "selected": sstr,
-                          "pool_index": pools.index(p),
-                          "pool_cidr": p.get("CIDR Range")
-                        }
-                        print(json.dumps(out))
-                        sys.exit(0)
-
-            print(json.dumps({}))
-            PY
-          environment:
-            POOLS_JSON: "{{ candidate_pools | to_json }}"
-            REQ_REGION: "{{ req.region }}"
-            DESIRED_PREFIX: "{{ (req.subnet_size.split('/')[-1]) | int }}"
-          register: carve_result
-          changed_when: false
-
-        - name: Parse Python allocator output
-          set_fact:
-            carve_out: "{{ carve_result.stdout | from_json }}"
-
-        - name: Fail if no CIDR allocated
-          fail:
-            msg: "Unable to allocate {{ req.subnet_size }} for region {{ req.region }} — no available space."
-          when: carve_out is not defined or carve_out == {}
-
-        - name: Create subnet in GCP
-          google.cloud.gcp_compute_subnetwork:
-            name: "{{ req.region }}-auto-{{ req_idx + 1 }}-{{ (carve_out.selected | regex_replace('/', '-')) }}"
-            project: "{{ project_id }}"
-            region: "{{ req.region }}"
-            ip_cidr_range: "{{ carve_out.selected }}"
-            network: "{{ vpc_name }}"
-            auth_kind: serviceaccount
-            state: present
-          register: gcp_create_result
-          retries: 2
-          delay: 5
-          until: gcp_create_result is succeeded
-
-        - name: Add allocation record to result list
-          set_fact:
-            allocation_results: "{{ allocation_results + [ {
-              'region': req.region,
-              'subnet_size': req.subnet_size,
-              'allocated_cidr': carve_out.selected,
-              'pool_cidr': carve_out.pool_cidr,
-              'subnet_name': gcp_create_result.name
-            } ] }}"
+        index_var: req_idx
+      vars:
+        candidate_pools: "{{ candidate_pools }}"
+        project_id: "{{ project_id }}"
+        vpc_name: "{{ vpc_name }}"
+        repo_local_path: "{{ repo_local_path }}"
+        excel_file_path: "{{ excel_file_path }}"
+        pool_sheet: "{{ pool_sheet }}"
+        remarks: "{{ remarks }}"
+        allocation_results: "{{ allocation_results }}"
+        subnet_requests: "{{ subnet_requests }}"
+        github_repo_url: "{{ github_repo_url }}"
 
     - name: Display allocation summary
-      debug:
+      ansible.builtin.debug:
         var: allocation_results
 
-    - name: Update Excel with new allocations
-      vars:
-        today: "{{ ansible_date_time.date }}"
-      loop: "{{ allocation_results }}"
-      loop_control:
-        loop_var: alloc
-      block:
-        - name: Get matching pool row
-          set_fact:
-            matching_row: "{{ pool_data.list | selectattr('CIDR Range','equalto', alloc.pool_cidr) | list | first }}"
-
-        - name: Compute updated used CIDRs
-          set_fact:
-            existing_used: "{{ (matching_row['Used CIDRs'] | default('')) | trim }}"
-            new_used: >-
-              {% if existing_used %}
-                {{ existing_used + ', ' + alloc.allocated_cidr }}
-              {% else %}
-                {{ alloc.allocated_cidr }}
-              {% endif %}
-
-        - name: Determine updated status
-          set_fact:
-            new_status: >-
-              {% if 'Used' in matching_row['Status'] %}
-                Used
-              {% else %}
-                Partially Used
-              {% endif %}
-
-        - name: Update Excel sheet
-          community.general.write_excel:
-            path: "{{ excel_file_path }}"
-            sheet_name: "{{ pool_sheet }}"
-            data:
-              - CIDR Range: "{{ matching_row['CIDR Range'] }}"
-                Status: "{{ new_status }}"
-                "Used CIDRs": "{{ new_used }}"
-                "Allocated To": "{{ project_id }}"
-                "Region": "{{ alloc.region }}"
-                "Date Allocated": "{{ today }}"
-                "Remarks": "{{ remarks }}"
-            start_row: "{{ (pool_data.list | index(matching_row)) + 2 }}"
-            header: yes
-          delegate_to: localhost
-
-    - name: Commit and push Excel updates to GitHub
-      shell: |
+    - name: Commit and push CSV updates to GitHub
+      ansible.builtin.shell: |
         cd {{ repo_local_path }}
         git config user.name "ansible-automation"
         git config user.email "ansible@domain.com"
@@ -228,7 +97,7 @@
       changed_when: "'nothing to commit' not in git_push.stdout"
 
     - name: Final summary
-      debug:
+      ansible.builtin.debug:
         msg:
           - "✅ Subnet allocations completed successfully"
           - "{{ allocation_results }}"
