--- a/playbooks/gcp.yml
+++ b/playbooks/gcp.yml
@@ -1,6 +1,7 @@
 ---
 - name: GCP Multi-Region Subnet Allocator (Max 5 per run)
   hosts: localhost
+  connection: local
   become: true
   become_method: sudo
   gather_facts: no
