--- a/playbooks/gcp.yml
+++ b/playbooks/gcp.yml
@@ -5,16 +5,15 @@
   gather_facts: no
 
   vars:
-    github_repo_url: "https://github.com/premkumargunasekar/GCP_MULTIPLE_REGION.git"  
+    github_repo_url: "https://github.com/username/GCP_MULTIPLE_REGION.git"
     repo_local_path: "/tmp/ip-repo"
     excel_file_path: "{{ repo_local_path }}/cidr_data/cidr_pool.csv"
-    pool_sheet: "cidr_pool_master"
     vpc_name: "prem-vpc-network"
     project_id: "curious-idea-475408-d2"
 
     subnet_requests: "{{ subnet_requests | default([]) }}"
     remarks: "{{ remarks | default('Created via AAP/ServiceNow Catalog') }}"
-    allowed_sizes: ['/23', '/24', '/25', '/26', '/27', '/28', '/29']
+    allowed_sizes: ['/23','/24','/25','/26','/27','/28','/29']
     max_requests: 5
 
   tasks:
@@ -34,7 +33,7 @@
           - invalids | length == 0
         fail_msg: "Invalid subnet sizes: {{ invalids }}. Allowed: {{ allowed_sizes }}"
 
-    - name: Ensure Git is available
+    - name: Ensure git is available
       ansible.builtin.command: git --version
       register: git_check
       failed_when: git_check.rc != 0
@@ -49,16 +48,16 @@
       delegate_to: localhost
       become: false
 
-    - name: Read CIDR pool data from CSV
-      ansible.builtin.read_csv:
+    - name: Read pool data from CSV
+      community.general.read_csv:
         path: "{{ excel_file_path }}"
       register: pool_data
 
-    - name: Extract available CIDR pools (Free or Partially)
+    - name: Filter available CIDR pools (Free or Partially)
       ansible.builtin.set_fact:
         candidate_pools: "{{ pool_data.list | selectattr('Status', 'match', '(?i)Free|Partially') | list }}"
 
-    - name: Fail if no candidate pools are available
+    - name: Fail if no candidate pools
       ansible.builtin.fail:
         msg: "No Free or Partially Used CIDRs found in {{ excel_file_path }}"
       when: candidate_pools | length == 0
@@ -79,22 +78,21 @@
         vpc_name: "{{ vpc_name }}"
         repo_local_path: "{{ repo_local_path }}"
         excel_file_path: "{{ excel_file_path }}"
-        pool_sheet: "{{ pool_sheet }}"
         remarks: "{{ remarks }}"
         allocation_results: "{{ allocation_results }}"
         subnet_requests: "{{ subnet_requests }}"
         github_repo_url: "{{ github_repo_url }}"
 
-    - name: Display allocation summary
+    - name: Show allocation summary
       ansible.builtin.debug:
         var: allocation_results
 
-    - name: Commit and push CSV updates to GitHub
+    - name: Commit and push updates to GitHub
       ansible.builtin.shell: |
         cd {{ repo_local_path }}
         git config user.name "ansible-automation"
         git config user.email "ansible@domain.com"
-        git add "{{ excel_file_path }}"
+        git add .
         git commit -m "Subnet allocations via AAP: {{ remarks }}"
         git push origin main
       register: git_push
