--- a/GCP_MultiRegion_Allocator/playbooks/gcp.yml
+++ b/GCP_MultiRegion_Allocator/playbooks/gcp.yml
@@ -4,8 +4,8 @@
   connection: local
   gather_facts: false
   vars:
-    project_id: "your-gcp-project-id"
-    vpc_name: "your-vpc-name"
+    project_id: "curious-idea-475408-d2"
+    vpc_name: "prem-vpc-network"
     request_file: "cidr_data/request.json"
 
   tasks:
